--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 
 .seccion-oscura {
   color: white;
-  background-color: #1b1b32;
+  background-color: #221F3B;
 }
 
 .seccion-clara {
@@ -115,12 +115,12 @@ h1 {
 
 .experiencia .columna:hover {
   color: white;
-  background-color: #1b1b32;
+  background-color: #221F3B;
 }
 
 .experiencia i {
   font-size: 2.5rem;
-  color: #7ade30;
+  color: #6F4A8E;
   background-color: #0a0a23;
   padding: 8px 19px;
   border-radius: 50%;
